--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@dojo/cli-build-app": "^6.0.0",
     "@dojo/cli-test-intern": "^6.0.0",
     "@types/node": "~9.6.5",
+    "prettier": "1.18.2",
     "typescript": "~3.4.5"
   }
 }
